clientside coffee script com piling

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>The CoffeeScript demo</title>
   </head>
   <body>
-    Hello World!  
+    <div id="main-content">
+      <p>Hello World!</p>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
