server sending index page with styles

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>The CoffeeScript demo</title>
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.0/foundation-flex.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <ul class="row">
+      <li class="small-6 columns"> CompanyName</li>
+      <li class="small-2 columns"> Nav One</li>
+      <li class="small-2 columns"> Nav Two</li>
+      <li class="small-2 columns"> Nav Three</li>
+    </ul>
+
     <div id="main-content">
       <p>Hello World!</p>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
