--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, maximum-scale=1">
     <title>The CoffeeScript demo</title>
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.0/foundation-flex.css">
@@ -9,10 +10,10 @@
   </head>
   <body>
     <ul class="row">
-      <li class="small-6 columns"> CompanyName</li>
-      <li class="small-2 columns"> Nav One</li>
-      <li class="small-2 columns"> Nav Two</li>
-      <li class="small-2 columns"> Nav Three</li>
+      <li class="small-6 columns align-middle">CompanyName</li>
+      <li class="small-2 columns align-middle"> Nav One</li>
+      <li class="small-2 columns align-middle"> Nav Two</li>
+      <li class="small-2 columns align-middle"> Nav Three</li>
     </ul>
 
     <div id="main-content">
