appending data to the dom

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,9 +16,7 @@
       <li class="small-2 columns align-middle"> Nav Three</li>
     </ul>
 
-    <div id="main-content">
-      <p>Hello World!</p>
-    </div>
+    <div id="main-content"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
     <script src="index.js"></script>
   </body>
