--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,6 +6,10 @@
     <title>The CoffeeScript demo</title>
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.0/foundation-flex.css">
+
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.css">
+      
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
