--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,28 +6,18 @@
     <title>The CoffeeScript demo</title>
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.0/foundation-flex.css">
-
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.css">
-
+    <!-- <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.css"> -->
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-
-    <ul class="row">
-      <li class="nav small-6 columns align-middle">CompanyName</li>
-      <li class="nav small-2 columns align-middle"> Nav One</li>
-      <li class="nav small-2 columns align-middle"> Nav Two</li>
-      <li class="nav small-2 columns align-middle"> Nav Three</li>
-    </ul>
-    <div style="display: none;" class="modal">
+    <div class="modal">
       <div class="movie row"></div>
       <div class="ratings row align-center">
         <output
           for="grade"
           class="column small-12 align-self-bottom"
           id="slider-output"> C </output>
-
         <input
           type="range"
           class="column small-8 "
@@ -35,7 +25,6 @@
           value="6"
           min="0"
           max="12">
-
         <button
           class="small button secondary hollow small-6"
           type="button"
@@ -44,6 +33,14 @@
           </button>
       </div>
     </div>
+    
+    <ul class="row" id="navi">
+      <li class="nav small-6 columns align-middle">CompanyName</li>
+      <li class="nav small-2 columns align-middle"> Nav One</li>
+      <li class="nav small-2 columns align-middle"> Nav Two</li>
+      <li class="nav small-2 columns align-middle"> Nav Three</li>
+    </ul>
+
     <div id="main-content"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
