loading images on mobile safari

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1">
     <title>The CoffeeScript demo</title>
     <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.0/foundation-flex.css">
+      href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.0/foundation-flex.min.css">
     <!-- <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.css"> -->
     <link rel="stylesheet" href="styles.css">
@@ -33,17 +33,18 @@
           </button>
       </div>
     </div>
-    
+
     <ul class="row" id="navi">
-      <li class="nav small-6 columns align-middle">CompanyName</li>
-      <li class="nav small-2 columns align-middle"> Nav One</li>
-      <li class="nav small-2 columns align-middle"> Nav Two</li>
-      <li class="nav small-2 columns align-middle"> Nav Three</li>
+      <li class="nav small-6 columns align-top">CompanyName</li>
+      <li class="nav small-2 columns align-top"> Nav One</li>
+      <li class="nav small-2 columns align-top"> Nav Two</li>
+      <li class="nav small-2 columns align-top"> Nav Three</li>
     </ul>
 
     <div id="main-content"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.0/foundation.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
