--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.0/foundation-flex.min.css">
     <!-- <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -35,10 +36,10 @@
     </div>
 
     <ul class="row" id="navi">
-      <li class="nav small-6 columns align-top">CompanyName</li>
-      <li class="nav small-2 columns align-top"> Nav One</li>
-      <li class="nav small-2 columns align-top"> Nav Two</li>
-      <li class="nav small-2 columns align-top"> Nav Three</li>
+      <li class="nav small-6 columns align-middle">Soapbox</li>
+      <li class="nav small-2 columns align-middle"><i class="fa fa-search"></i></li>
+      <li class="nav small-2 columns align-middle"><i class="fa fa-users"></i></li>
+      <li class="nav small-2 columns align-middle"><i class="fa fa-home"></i></li>
     </ul>
 
     <div id="main-content"></div>
